[gd_scene load_steps=5 format=3 uid="uid://cfhi4nkej810f"]

[ext_resource type="Script" path="res://scene/DanmaC/danma/danma.gd" id="1_gybhv"]
[ext_resource type="Texture2D" uid="uid://cq3udibbkhx3w" path="res://asset/pic/bullet/enemy/激光.png" id="2_wxdkc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_al86q"]
size = Vector2(1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n623u"]
size = Vector2(1, 1)

[node name="Danma" type="CharacterBody2D"]
top_level = true
collision_layer = 64
collision_mask = 0
motion_mode = 1
script = ExtResource("1_gybhv")

[node name="colli_area" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_al86q")

[node name="damage_area" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="colli_da" type="CollisionShape2D" parent="damage_area"]
shape = SubResource("RectangleShape2D_n623u")

[node name="texture" type="Sprite2D" parent="."]
z_index = 500
z_as_relative = false
rotation = -1.5708
scale = Vector2(0.03, 0.03)
texture = ExtResource("2_wxdkc")
offset = Vector2(0, 16)

[node name="exist" type="Timer" parent="."]
process_mode = 1
wait_time = 0.2
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-0.5, -0.5, 1, 1)

[connection signal="body_entered" from="damage_area" to="." method="_on_damage_area_body_entered"]
[connection signal="timeout" from="exist" to="." method="_on_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
